--- a/website/src/pages/v3/features/error-masking.mdx
+++ b/website/src/pages/v3/features/error-masking.mdx
@@ -1,7 +1,4 @@
----
-id: error-masking
-title: Error Masking
----
+# Error Masking
 
 Yoga uses [the Envelop `useMaskedErrors`](https://www.envelop.dev/plugins/use-masked-errors) for automatically masking unexpected errors and preventing sensitive information leaking to clients.
 
