--- a/website/src/pages/v3/features/response-caching.mdx
+++ b/website/src/pages/v3/features/response-caching.mdx
@@ -1,9 +1,6 @@
----
-id: response-caching
-title: Response Caching
----
-
 import { PackageCmd } from '@theguild/components'
+
+# Response Caching
 
 Response caching is a technique for reducing server load by caching GraphQL query operation results.
 
@@ -95,7 +92,7 @@ useResponseCache({
 })
 ```
 
-## Invalidatios via Mutation
+## Invalidations via Mutation
 
 When executing a mutation operation the cached query results that contain type entities within the Mutation result will be automatically be invalidated.
 
@@ -154,7 +151,7 @@ useResponseCache({
 
 Then in your business logic you can call the `invalidate` method on the cache instance.
 
-Invalidate all GraphQL query results that referance a specific type:
+Invalidate all GraphQL query results that reference a specific type:
 
 ```ts
 cache.invalidate([{ type: 'User' }])
@@ -179,7 +176,7 @@ cache.invalidate([
 
 By default the response cache stores all the cached query results in memory.
 
-If you want a cache that is shared between multiple server instances you can use the Redis cache implementation.import { PackageCmd } from '@theguild/components';
+If you want a cache that is shared between multiple server instances you can use the Redis cache implementation.
 
 <PackageCmd packages={['@envelop/response-cache-redis']} />
 
@@ -193,7 +190,7 @@ const redis = new Redis({
   password: '1234567890',
 })
 
-const redis = new Redis('rediss://:1234567890@my-redis-db.example.com:30652')
+const redis = new Redis('redis://:1234567890@my-redis-db.example.com:30652')
 
 const cache = createRedisCache({ redis })
 
