--- a/website/src/pages/v3/integrations/integration-with-nestjs.mdx
+++ b/website/src/pages/v3/integrations/integration-with-nestjs.mdx
@@ -1,8 +1,6 @@
----
-id: integration-with-nestjs
-title: Integration with Nest
-type: Guide
----
+import { PackageCmd } from '@theguild/components'
+
+# Integration with NestJS
 
 [Nest (Nest JS)](https://nestjs.com/) is a progressive Node.js framework for building efficient, reliable and scalable server-side applications.
 
@@ -13,8 +11,6 @@ GraphQL Yoga provides its [own Nest GraphQL Driver](https://github.com/charlypol
 ## Standalone GraphQL API
 
 ### Installation
-
-import { PackageCmd } from '@theguild/components'
 
 <PackageCmd packages={['@nestjs/graphql', '@graphql-yoga/nestjs']} />
 
