Update other envs integration

--- a/website/src/pages/v3/integrations/z-other-environments.mdx
+++ b/website/src/pages/v3/integrations/z-other-environments.mdx
@@ -6,24 +6,25 @@ GraphQL Yoga understands [WHATWG `Request` object](https://developer.mozilla.org
 
 ```ts
 import { createYoga } from 'graphql-yoga'
-import { Request } from '@whatwg-node/fetch' // or fetch spec compliant library
 
 const yoga = createYoga<MyRandomCtx>()
 
 export async function myMiddleware(req: MyRandomRequest, ctx: MyRandomCtx) {
   // req.url is a full url here not a relative path
-  const request = new Request(req.url, {
-    method: req.method,
-    headers: req.headers,
-    body: req.body // req.body should be a valid BodyInit like an AsyncIterable, a ReadableStream, a Node.js Readable, a string or a Buffer etc...
-  })
-
-  // Second parameter becomes your server context
-  const response = await yoga.handleRequest(req, ctx)
+  const response = await yoga.fetch(
+    req.url,
+    {
+      method: req.method,
+      headers: req.headers,
+      body: req.body // req.body should be a valid BodyInit like an AsyncIterable, a ReadableStream, a Node.js Readable, a string or a Buffer etc...
+    },
+    // Third parameter becomes your server context
+    ctx
+  )
   // response is a WHATWG `Response` object
 
   // Create a headers object for your middleware response
-  const headersObj: any = {}
+  const headersObj: Record<string, string> = {}
 
   response.headers.forEach((value, key) => {
     headersObj[key] = value
