Update installation instructions for v3

--- a/website/src/pages/v3/integrations/integration-with-nextjs.mdx
+++ b/website/src/pages/v3/integrations/integration-with-nextjs.mdx
@@ -6,7 +6,7 @@ import { PackageCmd } from '@theguild/components'
 
 ## Installation
 
-<PackageCmd packages={['graphql', 'graphql-yoga']} />
+<PackageCmd packages={['graphql', 'graphql-yoga@three']} />
 
 ## Example
 
