--- a/website/src/pages/v3/migration/migration-from-express-graphql.mdx
+++ b/website/src/pages/v3/migration/migration-from-express-graphql.mdx
@@ -6,7 +6,7 @@ import { PackageCmd } from '@theguild/components'
 
 You can start with installing `graphql-yoga` package.
 
-<PackageCmd packages={['graphql-yoga']} />
+<PackageCmd packages={['graphql-yoga@three']} />
 
 ## Replace Express GraphQL's middleware
 
