--- a/website/src/pages/v3/integrations/integration-with-fastify.mdx
+++ b/website/src/pages/v3/integrations/integration-with-fastify.mdx
@@ -10,7 +10,7 @@ So you can benefit from the powerful plugins of Fastify ecosystem with GraphQL Y
 
 ## Installation
 
-<PackageCmd packages={['fastify', 'graphql', 'graphql-yoga']} />
+<PackageCmd packages={['fastify', 'graphql', 'graphql-yoga@three']} />
 
 ## Example
 
