Correct bun example for v0.2.0 and disable segfaulting test

--- a/website/src/pages/v3/integrations/integration-with-bun.mdx
+++ b/website/src/pages/v3/integrations/integration-with-bun.mdx
@@ -32,6 +32,9 @@ const yoga = createYoga({
 })
 const server = Bun.serve(yoga)
 console.info(
-  `Server is running on ${new URL(yoga.graphqlEndpoint, server.hostname)}`
+  `Server is running on ${new URL(
+    yoga.graphqlEndpoint,
+    `http://${server.hostname}:${server.port}`
+  )}`
 )
 ```
