--- a/website/src/pages/v3/comparison.mdx
+++ b/website/src/pages/v3/comparison.mdx
@@ -99,7 +99,7 @@ The migration from Apollo Server to Yoga Server is easy and you can find [instru
 
 ### Maintainability
 
-The express-graphql project has been unmaintained for many years now.
+The `express-graphql` project has been unmaintained for many years now.
 
 Also, the project started as a small example of how to use GraphQL with a server and was never aimed to be used in production.
 
