Use relative paths

--- a/website/src/pages/v3/comparison.mdx
+++ b/website/src/pages/v3/comparison.mdx
@@ -107,17 +107,17 @@ It simply grew by itself without ever maturing in terms of code and ownership.
 
 ### Better in everything else
 
-If you check out the [comparison above to Apollo Server](https://www.the-guild.dev/graphql/yoga-server/v3/comparison#graphql-yoga-and-apollo-server), everything also applies also to the comparison with `express-graphql`. Same as with the Apollo Server Comparison, there isn't a single thing that express-graphql and Apollo Server are doing better than Yoga, including the express integration:
+If you check out the [comparison above to Apollo Server](#graphql-yoga-and-apollo-server), everything also applies also to the comparison with `express-graphql`. Same as with the Apollo Server Comparison, there isn't a single thing that express-graphql and Apollo Server are doing better than Yoga, including the express integration:
 
-* [No Framework-specific Packages](https://www.the-guild.dev/graphql/yoga-server/v3/comparison#no-framework-specific-packages)
-* [Run anywhere](https://www.the-guild.dev/graphql/yoga-server/v3/comparison#run-anywhere)
-* [Powerful Plugin System](https://www.the-guild.dev/graphql/yoga-server/v3/comparison#powerful-plugin-system)
-* [Full Support of the GraphQL over HTTP specification](https://www.the-guild.dev/graphql/yoga-server/v3/comparison#full-support-of-the-graphql-over-http-specification)
-* [File Uploads, Real time and GraphQL Subscriptions over Server-Sent-Events (SSE)](https://www.the-guild.dev/graphql/yoga-server/v3/comparison#real-time-and-graphql-subscriptions-over-server-sent-events-sse)
-* [Bundle Size and lean Dependencies](https://www.the-guild.dev/graphql/yoga-server/v3/comparison#bundle-size-and-lean-dependencies)
-* [Better runtime performance](https://www.the-guild.dev/graphql/yoga-server/v3/comparison#better-runtime-performance)
-* [GraphiQL](https://www.the-guild.dev/graphql/yoga-server/v3/comparison#graphiql)
-* [Compatibility with Apollo Federation](https://www.the-guild.dev/graphql/yoga-server/v3/comparison#compatibility-with-apollo-federation)
+* [No Framework-specific Packages](#no-framework-specific-packages)
+* [Run anywhere](#run-anywhere)
+* [Powerful Plugin System](#powerful-plugin-system)
+* [Full Support of the GraphQL over HTTP specification](#full-support-of-the-graphql-over-http-specification)
+* [File Uploads, Real time and GraphQL Subscriptions over Server-Sent-Events (SSE)](#real-time-and-graphql-subscriptions-over-server-sent-events-sse)
+* [Bundle Size and lean Dependencies](#bundle-size-and-lean-dependencies)
+* [Better runtime performance](#better-runtime-performance)
+* [GraphiQL](#graphiql)
+* [Compatibility with Apollo Federation](#compatibility-with-apollo-federation)
 
 
 ## GraphQL Yoga and GraphQL Helix
