--- a/website/src/pages/v3/features/testing.mdx
+++ b/website/src/pages/v3/features/testing.mdx
@@ -2,29 +2,13 @@
 
 GraphQL Yoga makes it easy to test your GraphQL API. It has built-in support for HTTP injection. You can use any testing framework of your choice.
 
-## Using `inject`
-
-```ts
-import { createYoga } from 'graphql-yoga'
-
-const yoga = createYoga()
-
-const { response, executionResult } = await yoga.inject({
-  document: '{ greetings }',
-})
-
-console.assert(response.status === 200, 'Response status should be 200')
-console.assert(
-  executionResult.data.greetings ===
-    'This is the `greetings` field of the root `Query` type',
-  `Expected 'This is the `greetings` field of the root `Query` type' but got ${executionResult.data.greetings}`,
-)
-```
-
 ## Using `fetch` to test just like browsers on any JS environment
 
 ```ts
 import { createYoga } from 'graphql-yoga'
+import { schema } from './schema'
+
+const yoga = createYoga({ schema })
 
 const response = await yoga.fetch('http://localhost:4000/graphql', {
   method: 'POST',
@@ -45,14 +29,35 @@ console.assert(
 )
 ```
 
+## Using `inject`
+
+```ts
+import { createYoga } from 'graphql-yoga'
+import { schema } from './schema'
+
+const yoga = createYoga({ schema })
+
+const { response, executionResult } = await yoga.inject({
+  document: '{ greetings }',
+})
+
+console.assert(response.status === 200, 'Response status should be 200')
+console.assert(
+  executionResult.data.greetings ===
+    'This is the `greetings` field of the root `Query` type',
+  `Expected 'This is the `greetings` field of the root `Query` type' but got ${executionResult.data.greetings}`,
+)
+```
+
 ## Using `supertest` for Node.js
 
 ```ts
 import { createYoga } from 'graphql-yoga'
 import request from 'supertest'
 import { deepEqual } from 'assert'
+import { schema } from './schema'
 
-const yoga = createYoga()
+const yoga = createYoga({ schema })
 
 const response = await request(yoga).post('/graphql').send({
   query: '{ greetings }'
