--- a/website/src/pages/docs/features/graphiql.mdx
+++ b/website/src/pages/docs/features/graphiql.mdx
@@ -40,7 +40,7 @@ const server = createServer({ graphiql: false })
 server.start()
 ```
 
-<Callout type="warning" emoji="⚠️">
+<Callout type="warning">
   Be aware that this does not make your GraphQL server more secure. As long as
   the introspection and/or the "did you mean x" suggestion feature of GraphQL
   are enabled.
