--- a/website/src/pages/tutorial/advanced/01-authentication.mdx
+++ b/website/src/pages/tutorial/advanced/01-authentication.mdx
@@ -262,7 +262,7 @@ mutation {
 
 ![login mutation](https://i.imgur.com/mEy6vqY.png)
 
-<Callout type='warning' emoji='⚠️'>
+<Callout type="warning">
 You should be able to get the information of the user.
 
 **Please save the authentication token you get, we'll need that on the next step!**
