--- a/website/src/pages/v3/integrations/integration-with-nestjs.mdx
+++ b/website/src/pages/v3/integrations/integration-with-nestjs.mdx
@@ -168,7 +168,7 @@ Yoga Nest GraphQL integration supports building Apollo Federation Gateway and Se
 
 A complete example [is available in the repository](https://github.com/charlypoly/graphql-yoga-nestjs/tree/master/examples/graphql-federation-code-first).
 
-<Callout type="warning" emoji="⚠️">
+<Callout type="warning">
   `YogaGatewayDriver` and `YogaFederationDriver` drivers should be used with
   `graphql@15`.
 </Callout>
